part_2/log-output-app/manifests/debugging-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-busybox
  namespace: log-output
  labels:
    app: my-busybox
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
