part_2/log-output-app/manifests/log-output-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-app-svc
  namespace: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
